Fixed overflow issues in notes!

--- a/src/components/Notes/TodoList.css
+++ b/src/components/Notes/TodoList.css
@@ -35,8 +35,10 @@
   margin-bottom: 2%;
 }
 
-.note-content input {
+.note-content .input {
+  border: none;
   padding-left: 5px;
+  height: 50px;
   width: 85%;
 }
 
